@@ -43,6 +43,13 @@ describe("pol", () => {
         const runs = result.filter( (ex: IPolicyExecution) => ex.result).length;
         assert.equal(runs,2);
     });
+
+    it("can do test03.out.n3", async () => {
+        const result = await doPolicy('test/t/test03.out.n3');
+        const runs = result.filter( (ex: IPolicyExecution) => ex.result).length;
+        // We test a failure to execute the sendNotification...
+        assert.equal(runs,0);
+    });
 });
 
 async function doPolicy(path: string) {
