@@ -1,0 +1,20 @@
+@prefix ex: <http://example.org/>.
+@prefix as: <https://www.w3.org/ns/activitystreams#>.
+@prefix pol:  <https://www.example.org/ns/policy#> .
+@prefix fno:  <https://w3id.org/function/ontology#> .
+
+ex:Test 
+    a as:Announce .
+
+ ex:DemoPolicy pol:policy [
+      a fno:Execution ;
+      fno:executes ex:sendNotification ;
+      ex:to <http://httpbin.org/post> ;
+      ex:notification ex:DemoNotification
+    ] .
+
+ex:DemoNotification
+    a as:Accept ;
+    as:actor   <http://patrickhochstenbach.net/profile/card#me> ;
+    as:origin  <http://patrickhochstenbach.net/orchestrator/profile/card#me> ;
+    as:object  ex:Test.
